include_directories(${SPH_SOURCE_DIR}/include/)
add_executable(SPH
    particle.cpp
    basicStruct.cpp
    eulerIntegrator.cpp
    hashGrid.cpp
    solver.cpp
    eosSolver.cpp
    main.cpp
    initializer.cpp
    loader/objLoader.cpp
    loader/loadWaterBox.cpp
    writer/writeRawParticleData.cpp
)
