include_directories(${SPH_SOURCE_DIR}/include/)
add_executable(SPH
    particle.cpp
    basicStruct.cpp
    eulerIntegrator.cpp
    hashGrid.cpp
    solver.cpp
    basicSolver.cpp
    eosSolver.cpp
    main.cpp
    initializer.cpp
    densityVolume.cpp
    loader/objLoader.cpp
    loader/loadBox.cpp
    writer/writeRawParticleData.cpp
    writer/writeVolumeData.cpp
)
